# text_adventure_parser

./: README.md  demo.py  pyproject.toml  run_demo.py  run_game.py  tox.ini
.github/workflows/: build.yml
demo_game/: engine.py  game.py  player.py  resources.py  room.py
tests/: test_parse_result.py  test_parser.py  test_text_util.py
text_adventure_parser/: __init__.py  parse_result.py  parser.py  text_util.py
